--- a/hello.ipynb
+++ b/hello.ipynb
@@ -1,46 +1,20 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.1-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.1 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "583c9568aa39caaa1643dc482898c18486846936909030e0218a82dbe3bb10a8"
-    }
-   }
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(\"Hello world\")"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Define variables in python"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -76,17 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Hello\nworld\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Hello\")\n",
     "print(\"World\")"
@@ -94,17 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "65\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tv = 15\n",
     "mobile = 20\n",
@@ -120,17 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "362880\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# indentation\n",
     "n = 9\n",
@@ -147,17 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "hello\nhello\nhello\n    world\n\nhello\nworld\n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "str1 = 'hello'\n",
     "str2 = \"hello\"\n",
@@ -176,89 +118,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "20\nAge : 20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "age = 20; print(age); print(\"Age : \" + str(age))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Hello \nWorld\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Hello \\nWorld\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Hello\tWorld\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Hello\\tWorld\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Hello\tWorld\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Hello\\tWorld')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Emma\n",
-      "12\n",
-      "24\n",
-      "EmmaEmmaEmma\n",
-      "--------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = input(\"Enter name\")\n",
     "print(name)\n",
@@ -277,34 +175,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Emma12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(name + str(number))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "99\n99\n99\n88\n99\n99\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# define 3 variables at the same and all have same value\n",
     "a = b = c = 99\n",
@@ -320,17 +202,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "John john@example.com 30\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# define 3 variables at the same and all have different values\n",
     "name, email, age = \"John\", \"john@example.com\", 30\n",
@@ -339,51 +213,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "pi = 3.14159\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"pi = %s\" % \"3.14159\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "pi = 3.14159\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"pi = %.5f\" % 3.14159)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "pi is <3.14  >\npi is <  3.14>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"pi is <%-6.2f>\" % 3.14159)\n",
     "print(\"pi is <%6.2f>\" % 3.14159)"
@@ -391,17 +241,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Name : John, Email : john@example.com, Age : 30\nJohn\tjohn@example.com\t30.000\nBob\tbob@example.com\t35.000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# using the % to do formatting sequences\n",
     "\n",
@@ -418,17 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Name : Bob, Email : bob@example.com, Age: 35\nAge: Bob, Name : Bob, Email : bob@example.com\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use the format() with numerical index\n",
     "print(\"Name : {0}, Email : {1}, Age: {2}\".format(name, email, age))\n",
@@ -437,17 +271,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Name : Bob, Email : bob@example.com, Age : 35\nAge : 35, Name : Bob, Email : bob@example.com\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use name instead\n",
     "print(\"Name : {n}, Email : {e}, Age : {a}\".format(n=name, e=email, a=age))\n",
@@ -456,17 +282,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Ambrossia  is the food of gods\nAmbrossiaccc is the food of gods\nAmbrossia  is the food of gods\nAmbrossia  is the food of gods\n Ambrossia is the food of gods\n&&&Ambross is the food of gods\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"{0:10} is the food of gods\".format(\"Ambrossia\"))\n",
     "print(\"{0:10} is the food of gods\".format(\"Ambrossiaccc\"))\n",
@@ -478,17 +296,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "3.14 - 3.1416 - 2.72\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# named parameters and formatting sequences\n",
     "num_dict = {'e' : 2.718, 'pi' : 3.14159}\n",
@@ -497,17 +307,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Formatted time :  Mon Feb 22 13:37:16 2021\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time \n",
     "localtime = time.asctime(time.localtime(time.time()))\n",
@@ -516,35 +318,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "                                  2021\n\n      January                   February                   March\nMo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su\n             1  2  3       1  2  3  4  5  6  7       1  2  3  4  5  6  7\n 4  5  6  7  8  9 10       8  9 10 11 12 13 14       8  9 10 11 12 13 14\n11 12 13 14 15 16 17      15 16 17 18 19 20 21      15 16 17 18 19 20 21\n18 19 20 21 22 23 24      22 23 24 25 26 27 28      22 23 24 25 26 27 28\n25 26 27 28 29 30 31                                29 30 31\n\n       April                      May                       June\nMo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su\n          1  2  3  4                      1  2          1  2  3  4  5  6\n 5  6  7  8  9 10 11       3  4  5  6  7  8  9       7  8  9 10 11 12 13\n12 13 14 15 16 17 18      10 11 12 13 14 15 16      14 15 16 17 18 19 20\n19 20 21 22 23 24 25      17 18 19 20 21 22 23      21 22 23 24 25 26 27\n26 27 28 29 30            24 25 26 27 28 29 30      28 29 30\n                          31\n\n        July                     August                  September\nMo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su\n          1  2  3  4                         1             1  2  3  4  5\n 5  6  7  8  9 10 11       2  3  4  5  6  7  8       6  7  8  9 10 11 12\n12 13 14 15 16 17 18       9 10 11 12 13 14 15      13 14 15 16 17 18 19\n19 20 21 22 23 24 25      16 17 18 19 20 21 22      20 21 22 23 24 25 26\n26 27 28 29 30 31         23 24 25 26 27 28 29      27 28 29 30\n                          30 31\n\n      October                   November                  December\nMo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su\n             1  2  3       1  2  3  4  5  6  7             1  2  3  4  5\n 4  5  6  7  8  9 10       8  9 10 11 12 13 14       6  7  8  9 10 11 12\n11 12 13 14 15 16 17      15 16 17 18 19 20 21      13 14 15 16 17 18 19\n18 19 20 21 22 23 24      22 23 24 25 26 27 28      20 21 22 23 24 25 26\n25 26 27 28 29 30 31      29 30                     27 28 29 30 31\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import calendar\n",
-    "calendar.prcal(2021)"
+    "calendar.prcal(2025)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "equal 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# conditional statements\n",
     "x = 5\n",
@@ -559,17 +345,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "1\n2\n3\n4\n5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# iterate 1 to 5 and display value\n",
     "for v in range(1, 6) :\n",
@@ -578,17 +356,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "0\n1\n2\n3\n4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for v in range(5) :\n",
     "    print(v)"
@@ -596,17 +366,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "2\n4\n6\n8\n10\n12\n14\n16\n18\n20\n22\n24\n26\n28\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for v in range(2, 30, 2) :\n",
     "    print(v)"
@@ -614,17 +376,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "apple\nbanana\ncherry\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# list of fruit names\n",
     "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
@@ -634,17 +388,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "J\no\nh\nn\n \nS\nm\ni\nt\nh\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = \"John Smith\"\n",
     "for s in name :\n",
@@ -653,17 +399,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "apple\nbanana\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# stop looping when f is banana - break : exit from the current block\n",
     "for f in fruits :\n",
@@ -674,17 +412,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "apple\ncherry\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# continue : go to next iteration/item\n",
     "for f in fruits :\n",
@@ -695,17 +425,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "1\n2\n3\n4\n5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# while-loop 1 to 5\n",
     "i = 1\n",
@@ -716,17 +438,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "1\n2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "i = 1\n",
     "while i <= 5 :\n",
@@ -738,17 +452,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "2\n4\n5\n6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "i = 1\n",
     "while i <= 5 :\n",
@@ -761,17 +467,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "apple\nbanana\ncherry\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use while loop to iterate fruits\n",
     "i = 0\n",
@@ -782,17 +480,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "cannot convert to int\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "number = \"abc\"  # user input - string\n",
     "\n",
@@ -804,17 +494,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Python Data Science\nPytho\nn Data Science\nPytho\nn Dat\nience\nPython Data Sc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# example of string slicing\n",
     "title = \"Python Data Science\"\n",
@@ -841,17 +523,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "True\nFalse\nTrue\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "subtext = \"Python\"\n",
     "print(subtext in title)\n",
@@ -865,17 +539,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Total:  3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use lambda to define anonymous function\n",
     "sum = lambda val1, val2 : val1 + val2\n",
@@ -886,17 +552,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Total:  3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use python syntax to define function\n",
     "def add(val1, val2) :\n",
@@ -904,13 +562,28 @@
     "\n",
     "print(\"Total: \", add(1, 2))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
