--- a/notebook/Lemonade Analysis.ipynb
+++ b/notebook/Lemonade Analysis.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "# load the data\n",
-    "data = pd.read_excel('data/Lemonade.xlsx')\n",
+    "data = pd.read_excel('../data/Lemonade.xlsx')\n",
     "data"
    ]
   },
