--- a/notebook/Read Users.ipynb
+++ b/notebook/Read Users.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "# set the file path\n",
-    "file = 'data/users.txt'\n",
+    "file = '../data/users.txt'\n",
     "\n",
     "# open the file for reading\n",
     "data = open(file)\n",
