--- a/notebook/Sales Revenue.ipynb
+++ b/notebook/Sales Revenue.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "# load sales calls data\n",
-    "sales_calls = pd.read_csv('data/sales_calls.csv')\n",
+    "sales_calls = pd.read_csv('../data/sales_calls.csv')\n",
     "print(sales_calls)\n",
     "print(type(sales_calls))"
    ]
